# crm-expertiz

./: Makefile  README.md  main.py  pyproject.toml
alembic/versions/: 2d7ad9e973ee_update_document_atributcase_id.py  40aad378fece_add_company_model.py  4c25d7102237_fix_table.py  7100554be6e6_initial_with_user_model.py  a43fbd40fbe3_add_expert_and_documents.py  b77e4c662fb4_add_folders_table.py  c22bd4f05ce1_описание_миграции.py  c8bb8ec64fcf_add_folders_table.py  ebc8060eb98a_fix_model_user_and_document.py  f833aefbc52a_add_mails_table.py
src/: main.py
src/app/core/auth/: deps.py  session.py
src/app/core/config/: settings.py
src/app/core/database/: all_models.py  session.py
src/app/core/storage/: s3.py
src/app/services/case/: __init__.py  endpoints.py  models.py  schemas.py  service.py
src/app/services/client/: endpoints.py  models.py  schemas.py  service.py
src/app/services/company/: endpoints.py  models.py  service.py
src/app/services/document/: __init__.py  endpoints.py  models.py  schemas.py  service.py
src/app/services/expert/: __init__.py  models.py
src/app/services/mail/: models.py
src/app/services/user/: __init__.py  endpoints.py  models.py  schemas.py  service.py  setup.py
tests/: conftest.py
tests/services/client/: test_endpoints.py
